adição de estrutura de roteamento

--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="index.js"></script>
 </head>
 
 <body>
-
+    <div id="app">
+        <a onclick="navigateTo('area-logada/home-gestor/home-gestor.html')">click</a>
+    </div>
 </body>
 
 </html>
