--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="app">
-        <a onclick="navigateTo('area-logada/adicionar-registro/adicionar-registro.html')">click</a>
+        <a onclick="navigateTo('area-logada/sobre/sobre.html')">click</a>
     </div>
 </body>
 
