--- a/codigo-fonte/area-logada/sobre/sobre.html
+++ b/codigo-fonte/area-logada/sobre/sobre.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,26 +10,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
     <title>Sobre</title>
 </head>
+
 <body>
-    <div class="header">
-        <div class="menu-icon">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-        </div>
-    </div>
-    <ul class="menu">
-        <li>PÁGINA INICIAL</li>
-        <li>SOBRE</li>
-        <li>REGISTROS</li>
-    </ul>
+    <div id="menu-container"></div>
+    <script src="../../componentes/top-menu.js"></script>
     <div class="content">
         <div class="yellow-box">
             <div class="text-container">
                 <h2>Sobre</h2>
-                <p>O mercado de trabalho está sempre em constante mudança e isso acarreta uma competição acirrada entre profissionais das mais diversas áreas. Esse movimento tende a estimular os profissionais a atualizarem seus conhecimentos, assim como se adaptarem às mudanças de forma rápida para se destacarem e conseguirem mais oportunidades no meio corporativo.<br> </p>
-                <p>O conhecimento é um dos pilares mais importantes para o crescimento e sucesso profissional. Por isso, o profissional que sempre busca atualização ou até mesmo busca cursos para desenvolver novas habilidades ganha destaque e reconhecimento.<br></p>
-                <p>Como forma de mensurar e acompanhar o desenvolvimento e qualificação dos nosso colaboradores, disponibilizamos este aplicativo para registrar as horas dedicadas à qualificação e desenvolvimento de competências. Acesse a página Registo no menu acima para cadastrar suas horas dedicadas à expansão de conhecimentos e competências.</p>
+                <p>O mercado de trabalho está sempre em constante mudança e isso acarreta uma competição acirrada entre
+                    profissionais das mais diversas áreas. Esse movimento tende a estimular os profissionais a
+                    atualizarem seus conhecimentos, assim como se adaptarem às mudanças de forma rápida para se
+                    destacarem e conseguirem mais oportunidades no meio corporativo.<br> </p>
+                <p>O conhecimento é um dos pilares mais importantes para o crescimento e sucesso profissional. Por isso,
+                    o profissional que sempre busca atualização ou até mesmo busca cursos para desenvolver novas
+                    habilidades ganha destaque e reconhecimento.<br></p>
+                <p>Como forma de mensurar e acompanhar o desenvolvimento e qualificação dos nosso colaboradores,
+                    disponibilizamos este aplicativo para registrar as horas dedicadas à qualificação e desenvolvimento
+                    de competências. Acesse a página Registo no menu acima para cadastrar suas horas dedicadas à
+                    expansão de conhecimentos e competências.</p>
             </div>
         </div>
         <div class="image-container">
@@ -38,4 +38,5 @@
         </div>
     </div>
 </body>
+
 </html>
