--- a/codigo-fonte/area-logada/home-colaborador/home-colaborador.html
+++ b/codigo-fonte/area-logada/home-colaborador/home-colaborador.html
@@ -8,18 +8,9 @@
 
 <body>
 
-    <header>
-        <div class="bg-image">
-            <div class="container">
-                <img style="width: 96px" src="../../imagens/logo.jpeg" />
-                <div class="menu" style="align-self: center">
-                    <a href="#">INÍCIO</a>
-                    <a href="#">SOBRE</a>
-                    <a href="#">REGISTROS</a>
-                </div>
-            </div>
-    </header>
-
+    <div id="menu-container"></div>
+    <script src="../../componentes/top-menu.js"></script>
+    <img src="../../imagens/universidade.jpg">
 </body>
 
 </html>
