tela de novo usuario

--- a/codigo-fonte/area-nao-logada/login/login.html
+++ b/codigo-fonte/area-nao-logada/login/login.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./login.css">
+    <script src="./login.js"></script>
 </head>
+
 <body>
     <header>
         <div class="navigation">
@@ -30,7 +33,10 @@
     </header>
     <div class="login-container">
         <h2>Login</h2>
-        <p class="create-account-button"><a href="#">Clique aqui para criar novo cadastro</a></p>
+        <p class="create-account-button"><a>Clique
+                aqui para
+                criar novo cadastro</a>
+        </p>
         <div class="stripe bottom"></div>
         <div class="login-form">
             <form>
@@ -47,6 +53,7 @@
             </form>
         </div>
     </div>
-    
+
 </body>
+
 </html>
