--- a/codigo-fonte/area-nao-logada/login/login.html
+++ b/codigo-fonte/area-nao-logada/login/login.html
@@ -1,42 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="./login.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <title>LOGIN</title>
+    
     <script src="./login.js"></script>
 </head>
 
 <body>
-    <header>
-        <div class="navigation">
-            <div class="navigation-buttons">
-                <button class="back-button"><img src="../../imagens/setaesquerda.png" alt="back"></button>
-                <button class="forward-button"><img src="../../imagens/setadireita.png" alt="front"></button>
-                <button class="reload-button"><img src="../../imagens/reload.png" alt="reload"></button>
-            </div>
-            <div class="search-bar-container">
-                <button class="lupa-icon"><img src="../../imagens/loupe.png" alt="lupa"></button>
-                <div class="search-bar">
-                    <input type="text" placeholder="">
-                </div>
-            </div>
-            <div class="notification-button">
-                <img src="../../imagens/sino.png" alt="Notificações">
-            </div>
-            <div class="share-button">
-                <img src="../../imagens/icon share.png" alt="Compartilhar">
-            </div>
-        </div>
-    </header>
     <div class="login-container">
-        <h2>Login</h2>
-        <p class="create-account-button"><a>Clique
-                aqui para
-                criar novo cadastro</a>
-        </p>
+        <h1><b>Login</b></h1>
+        <p class="create-account-button"><a href="../cadastro/cadastro.html">Clique aqui para criar novo cadastro</a></p>
+       
         <div class="stripe bottom"></div>
         <div class="login-form">
             <form>
@@ -49,7 +30,7 @@
                     <input type="password" id="password" name="password" placeholder="">
                 </div>
                 <p class="forgot-password"><a href="#">Esqueceu a senha?</a></p>
-                <button class="login-button" type="submit">ENTRAR</button>
+                <button class="login-button"><a href="../../area-logada/home-colaborador/home-colaborador.html">ENTRAR</a></button>
             </form>
         </div>
     </div>
