--- a/codigo-fonte/area-logada/adicionar-registro/adicionar-registro.html
+++ b/codigo-fonte/area-logada/adicionar-registro/adicionar-registro.html
@@ -4,9 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="./adicionar-registro.css">
+    <link rel="stylesheet" href="./adicionar-registro.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <title>ADICIONAR REGISTRO</title>
+
 </head>
+    <ul class="menu">
+        <li> <a href="../home-colaborador/home-colaborador.html">PÁGINA INICIAL</a></li>
+        <li><a href="../sobre/sobre.html">SOBRE</a></li>
+        <li><a href="../meus-registros/meus-registros.html">REGISTROS</a></li>
+    </ul>
 
 <body>
     <div id="menu-container"></div>
@@ -31,7 +40,7 @@
                         <option>Curso de Curta Duração</option>
                         <option>Workshop</option>
                         <option>Vídeo Aula</option>
-                        <option>Treinamento</option>
+                        <option>Curso de Capacitação</option>
                         <option>Diciplina Isolada</option>
                     </select>
                 </div>
@@ -79,10 +88,9 @@
                     </select>
                 </div>
             </div>
-            <div class="botao">
-                <button class="botaotexto" type="submit">CONFIRMAR</button>
-            </div>
+            <button class="botao"> <a href="../meus-registros/meus-registros.html">CONFIRMAR</a></button>
         </form>
+    </div>
 </body>
 
 </html>
