--- a/codigo-fonte/area-logada/home-colaborador/home-colaborador.html
+++ b/codigo-fonte/area-logada/home-colaborador/home-colaborador.html
@@ -1,16 +1,32 @@
+<!DOCTYPE html>
+
 <html lang="pt-br">
 
 <head>
-    <title>Qualifique</title>
-    <link href="./home-colaborador.css" rel="stylesheet" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./home-colaborador.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <title>PÁGINA PRINCIPAL</title>
 </head>
 
-<body>
+<header>
+    <ul class="menu">
+        <li> <a href="../home-colaborador/home-colaborador.html">PÁGINA INICIAL</a></li>
+        <li><a href="../sobre/sobre.html">SOBRE</a></li>
+        <li><a href="../meus-registros/meus-registros.html">REGISTROS</a></li>
+    </ul>
+</header>
 
-    <div id="menu-container"></div>
-    <script src="../../componentes/top-menu.js"></script>
-    <img src="../../imagens/universidade.jpg">
+<body>
+    <section class="container">
+        <img src="../../imagens/principal.png">
+        <div class="titulo"><b>Bem-vindo ao Qualifique</b></div>
+        <div class="subtitulo"><b>Sua plataforma de controle de horas de cursos e treinamentos</b></div>
+        <button class="button"> <a href="../sobre/sobre.html"><b>SAIBA MAIS SOBRE</b></a></button>
+    </section>
 </body>
 
 </html>
