--- a/codigo-fonte/area-logada/sobre/sobre.html
+++ b/codigo-fonte/area-logada/sobre/sobre.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,35 +7,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
-    <title>Sobre</title>
+    <title>SOBRE</title>
 </head>
-
 <body>
-    <div id="menu-container"></div>
-    <script src="../../componentes/top-menu.js"></script>
+    <ul class="menu">
+        <li> <a href="../home-colaborador/home-colaborador.html">PÁGINA INICIAL</a></li>
+        <li><a href="../sobre/sobre.html">SOBRE</a></li>
+        <li><a href="../meus-registros/meus-registros.html">REGISTROS</a></li>
+    </ul>
     <div class="content">
         <div class="yellow-box">
             <div class="text-container">
-                <h2>Sobre</h2>
-                <p>O mercado de trabalho está sempre em constante mudança e isso acarreta uma competição acirrada entre
-                    profissionais das mais diversas áreas. Esse movimento tende a estimular os profissionais a
-                    atualizarem seus conhecimentos, assim como se adaptarem às mudanças de forma rápida para se
-                    destacarem e conseguirem mais oportunidades no meio corporativo.<br> </p>
-                <p>O conhecimento é um dos pilares mais importantes para o crescimento e sucesso profissional. Por isso,
-                    o profissional que sempre busca atualização ou até mesmo busca cursos para desenvolver novas
-                    habilidades ganha destaque e reconhecimento.<br></p>
-                <p>Como forma de mensurar e acompanhar o desenvolvimento e qualificação dos nosso colaboradores,
-                    disponibilizamos este aplicativo para registrar as horas dedicadas à qualificação e desenvolvimento
-                    de competências. Acesse a página Registo no menu acima para cadastrar suas horas dedicadas à
-                    expansão de conhecimentos e competências.</p>
+                <h1><b>Sobre</b></h1>
+                <p></p>
+                <p>O mercado de trabalho está sempre em constante mudança e isso acarreta uma competição acirrada entre profissionais das mais diversas áreas. Esse movimento tende a estimular os profissionais a atualizarem seus conhecimentos, assim como se adaptarem às mudanças de forma rápida para se destacarem e conseguirem mais oportunidades no meio corporativo.<br> </p>
+                <p>O conhecimento é um dos pilares mais importantes para o crescimento e sucesso profissional. Por isso, o profissional que sempre busca atualização ou até mesmo busca cursos para desenvolver novas habilidades ganha destaque e reconhecimento.<br></p>
+                <p>Como forma de mensurar e acompanhar o desenvolvimento e qualificação dos nosso colaboradores, disponibilizamos este aplicativo para registrar as horas dedicadas à qualificação e desenvolvimento de competências.</p>
             </div>
         </div>
         <div class="image-container">
             <div class="image">
-                <img src="../../imagens/sobre.png" alt="Estudando">
+                <img src="../../imagens/sobre.png" alt="Criança estudando">
             </div>
         </div>
     </div>
 </body>
-
 </html>
+ 
