--- a/codigo-fonte/area-logada/adicionar-registro/adicionar-registro.html
+++ b/codigo-fonte/area-logada/adicionar-registro/adicionar-registro.html
@@ -11,11 +11,13 @@
     <title>ADICIONAR REGISTRO</title>
 
 </head>
+<header>
     <ul class="menu">
         <li> <a href="../home-colaborador/home-colaborador.html">PÁGINA INICIAL</a></li>
         <li><a href="../sobre/sobre.html">SOBRE</a></li>
         <li><a href="../meus-registros/meus-registros.html">REGISTROS</a></li>
     </ul>
+</header>
 
 <body>
     <div id="menu-container"></div>
