--- a/codigo-fonte/area-nao-logada/login/login.html
+++ b/codigo-fonte/area-nao-logada/login/login.html
@@ -13,6 +13,7 @@
     <script src="./login.js"></script>
 </head>
 
+
 <body>
     <div class="login-container">
         <h1><b>Login</b></h1>
@@ -20,21 +21,26 @@
        
         <div class="stripe bottom"></div>
         <div class="login-form">
-            <form>
+            <form id="formlogin">
                 <div class="form-group">
-                    <label for="username">E M A I L</label>
-                    <input type="text" id="username" name="username" placeholder="">
+                    <label for="email">E M A I L</label>
+                    <input type="text" id="email" name="email" placeholder="">
                 </div>
                 <div class="form-group">
                     <label for="password">S E N H A</label>
                     <input type="password" id="password" name="password" placeholder="">
                 </div>
                 <p class="forgot-password"><a href="#">Esqueceu a senha?</a></p>
-                <button class="login-button"><a href="../../area-logada/home-colaborador/home-colaborador.html">ENTRAR</a></button>
+                <button class="login-button" type="submit" id="enviaFormulario">
+                    ENTRAR
+                    <!-- <a href="../../area-logada/home-colaborador/home-colaborador.html">ENTRAR</a> -->
+                </button>
             </form>
         </div>
     </div>
-
+    <!-- <script>
+        createUsers();
+    </script> -->
 </body>
 
 </html>
