--- a/codigo-fonte/area-logada/home-colaborador/home-colaborador.html
+++ b/codigo-fonte/area-logada/home-colaborador/home-colaborador.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
         <title>PÁGINA PRINCIPAL</title>
+        <link rel="stylesheet" href="home-colaborador.css">
     </head>
 
     <header>
@@ -22,10 +23,11 @@
 
     <body>
         <section class="container">
-            <img src="../../imagens/principal.png">
-            <div class="titulo"><b>Bem-vindo ao Qualifique</b></div>
+            <img src="../../imagens/imagem.teste.jpg">
+            <div class="titulo"><b>Qualifique</b></div>
             <div class="subtitulo"><b>Sua plataforma de controle de horas de cursos e treinamentos</b></div>
-            <button class="button"> <a href="../sobre/sobre.html"><b>SAIBA MAIS SOBRE</b></a></button>
+            <button class="button"> <a href="../sobre/sobre.html"><b>SOBRE</b></a></button>
+             
         </section>
     </body>
 </html>
