--- a/codigo-fonte/area-nao-logada/login/login.html
+++ b/codigo-fonte/area-nao-logada/login/login.html
@@ -38,9 +38,9 @@
             </form>
         </div>
     </div>
-    <script>
+     <!-- <script>
         createUsers();
-    </script> 
+    </script> -->
 </body>
 
 </html>
