--- a/codigo-fonte/area-logada/home-gestor/home-gestor.html
+++ b/codigo-fonte/area-logada/home-gestor/home-gestor.html
@@ -1,17 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="./home-gestor.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <script src="home-gestor.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.5/xlsx.full.min.js"></script>
+    <title>MEUS REGISTROS</title>
 </head>
 
 <body>
-    <div>
-        <p>funcionou</p>
+    <ul class="menu">
+        <li> <a href="../home-colaborador/home-colaborador.html">PÁGINA INICIAL</a></li>
+        <li><a href="../sobre/sobre.html">SOBRE</a></li>
+        <li><a href="../meus-registros/meus-registros.html">REGISTROS</a></li>
+    </ul>
+    <div class="global-container">
+        <div class="user-pic-container">
+            <div class="avatar-msg-container">
+                <img class="avatar-size" src="../../imagens/leonardo.png">
+                <span class="default-text">Olá, Leonardo</span>
+            </div>
+            <div>
+                <img class="icon" src="../../imagens/printer.svg">
+                <span id="relatorio-horas-por-gestor" class="default-text">Relatório de horas por setor</span>
+            </div>
+        </div>
+        <a href="../../area-logada/adicionar-registro/adicionar-registro.html" class="new-register-container">
+            <div class="yellow-circle plus-sign">+</div>
+            <span class="default-text"> NOVO REGISTRO</span>
+        </a>
+        <div class="chart-row-container">
+            <div class="grey-wrapper" style="width: 70%">
+                <canvas id="myChart"></canvas>
+            </div>
+            <div class="training-column-container">
+                <div>
+                    <div class="lighter-rectangle rectangle-text ">TOTAL DE REGISTROS</div>
+                    <div class="rectangle rectangle-text ">31</div>
+                </div>
+
+                <h2>POR ANO</h2>
+
+                <div class="training-rectangle-container">
+                    <div class="ligther-rectangle-row rectangle-text ">2021</div>
+                    <div class="rectangle-row rectangle-text ">8</div>
+                </div>
+
+                <div class="training-rectangle-container">
+                    <div class="ligther-rectangle-row rectangle-text ">2021</div>
+                    <div class="rectangle-row rectangle-text ">12</div>
+                </div>
+
+                <div class="training-rectangle-container">
+                    <div class="ligther-rectangle-row rectangle-text ">2021</div>
+                    <div class="rectangle-row rectangle-text ">11</div>
+                </div>
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+        
     </div>
 </body>
+
 
 </html>
