--- a/codigo-fonte/area-logada/meus-registros/meus-registros.html
+++ b/codigo-fonte/area-logada/meus-registros/meus-registros.html
@@ -25,7 +25,7 @@
                 <img class="avatar-size" src="../../imagens/leonardo.png">
                 <span class="default-text">Olá, Leonardo</span>
             </div>
-            <img class="icon" id="gerarRelatorio" src="../../imagens/printer.svg">
+            <img style="cursor: pointer" class="icon" id="gerarRelatorio" src="../../imagens/printer.svg">
         </div>
         <a href="../../area-logada/adicionar-registro/adicionar-registro.html" class="new-register-container">
             <div class="yellow-circle plus-sign">+</div>
