--- a/codigo-fonte/area-logada/home-gestor/home-gestor.html
+++ b/codigo-fonte/area-logada/home-gestor/home-gestor.html
@@ -22,18 +22,14 @@
     <div class="global-container">
         <div class="user-pic-container">
             <div class="avatar-msg-container">
-                <img class="avatar-size" src="../../imagens/leonardo.png">
-                <span class="default-text">Olá, Leonardo</span>
+                <span class="default-text user-name">Olá, </span>
             </div>
-            <div>
-                <img class="icon" src="../../imagens/printer.svg">
-                <span id="relatorio-horas-por-gestor" class="default-text">Relatório de horas por setor</span>
+            <div style="display: flex; flex-direction: column;">
+                <img style="cursor: pointer" id="gerarRelatorio" class="icon" src="../../imagens/printer.svg">
+                <span style="cursor: pointer" id="relatorio-horas-por-gestor" class="default-text">Relatório de horas por setor</span>
             </div>
         </div>
-        <a href="../../area-logada/adicionar-registro/adicionar-registro.html" class="new-register-container">
-            <div class="yellow-circle plus-sign">+</div>
-            <span class="default-text"> NOVO REGISTRO</span>
-        </a>
+
         <div class="chart-row-container">
             <div class="grey-wrapper" style="width: 70%">
                 <canvas id="myChart"></canvas>
@@ -41,31 +37,31 @@
             <div class="training-column-container">
                 <div>
                     <div class="lighter-rectangle rectangle-text ">TOTAL DE REGISTROS</div>
-                    <div class="rectangle rectangle-text ">31</div>
+                    <div class="rectangle rectangle-text-total">0</div>
                 </div>
 
                 <h2>POR ANO</h2>
 
                 <div class="training-rectangle-container">
                     <div class="ligther-rectangle-row rectangle-text ">2021</div>
-                    <div class="rectangle-row rectangle-text ">8</div>
+                    <div class="rectangle-row rectangle-text-2021">0</div>
                 </div>
 
                 <div class="training-rectangle-container">
-                    <div class="ligther-rectangle-row rectangle-text ">2021</div>
-                    <div class="rectangle-row rectangle-text ">12</div>
+                    <div class="ligther-rectangle-row rectangle-text ">2022</div>
+                    <div class="rectangle-row rectangle-text-2022 ">0</div>
                 </div>
 
                 <div class="training-rectangle-container">
-                    <div class="ligther-rectangle-row rectangle-text ">2021</div>
-                    <div class="rectangle-row rectangle-text ">11</div>
+                    <div class="ligther-rectangle-row rectangle-text ">2023</div>
+                    <div class="rectangle-row rectangle-text-2023 ">0</div>
                 </div>
             </div>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-        
+
     </div>
 </body>
 
