--- a/codigo-fonte/area-logada/meus-registros/meus-registros.html
+++ b/codigo-fonte/area-logada/meus-registros/meus-registros.html
@@ -23,7 +23,7 @@
         <div class="user-pic-container">
             <div class="avatar-msg-container">
                 <img class="avatar-size" src="../../imagens/leonardo.png">
-                <span class="default-text">Olá, Leonardo</span>
+                <span class="default-text user-name">Olá, Leonardo</span>
             </div>
             <img style="cursor: pointer" class="icon" id="gerarRelatorio" src="../../imagens/printer.svg">
         </div>
@@ -40,24 +40,24 @@
             <div class="training-column-container">
                 <div>
                     <div class="lighter-rectangle rectangle-text ">TOTAL DE REGISTROS</div>
-                    <div class="rectangle rectangle-text ">31</div>
+                    <div class="rectangle rectangle-text-total">0</div>
                 </div>
 
                 <h2>POR ANO</h2>
 
                 <div class="training-rectangle-container">
                     <div class="ligther-rectangle-row rectangle-text ">2021</div>
-                    <div class="rectangle-row rectangle-text ">8</div>
+                    <div class="rectangle-row rectangle-text-2021">0</div>
                 </div>
 
                 <div class="training-rectangle-container">
-                    <div class="ligther-rectangle-row rectangle-text ">2021</div>
-                    <div class="rectangle-row rectangle-text ">12</div>
+                    <div class="ligther-rectangle-row rectangle-text ">2022</div>
+                    <div class="rectangle-row rectangle-text-2022 ">0</div>
                 </div>
 
                 <div class="training-rectangle-container">
-                    <div class="ligther-rectangle-row rectangle-text ">2021</div>
-                    <div class="rectangle-row rectangle-text ">11</div>
+                    <div class="ligther-rectangle-row rectangle-text ">2023</div>
+                    <div class="rectangle-row rectangle-text-2023 ">0</div>
                 </div>
             </div>
         </div>
